changes to prevent any tool loading. try manual

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,7 +7,7 @@
 FROM quay.io/bgruening/galaxy:20.05 as galaxy-dev
 MAINTAINER Ross Lazarus ross.lazarus@gmail.com
 
-RUN apt-get update -y && apt-get install -y git python3-dev gcc \
+RUN apt-get update -y && apt-get install -y git python3-dev gcc sqlite3\
  && git clone https://github.com/fubar2/galaxy.git /tmp/galxxxx \
  && cp -r /tmp/galxxxx/* /galaxy-central/ \
  && . /galaxy_venv/bin/activate && /galaxy_venv/bin/python3 -m pip install --upgrade pip \
@@ -62,7 +62,12 @@ COPY tftools/requirements.txt $GALAXY_ROOT
 ENV $GALAXY_DEFAULT_ADMIN_USER="admin"
 # ENV GALAXY_CONFIG_TOOL_CONFIG_FILE=$GALAXY_ROOT/config/tf_tool_conf.xml,config/tool_conf.xml.sample
 # works but does not install dependencies - done in postinstall
+
+RUN mkdir -p /galaxy-central/static/scripts && cd /galaxy/central/static/scripts \
+  && ln -s galaxy-central/static/dist bundled
+
 RUN chown -R $GALAXY_USER:$GALAXY_USER /tftools 
+
 
 VOLUME ["/export/", "/data/", "/var/lib/docker"]
 EXPOSE :80
