remove ignores from flake8 Seems to make it more sensitive to line breaks near binary ops Go figure.

--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -53,7 +53,7 @@ jobs:
       with:
         fetch-depth: 1
     - name: flake8 *.py
-      run: flake8 --ignore=E2,E3,E4,E5,W3,W505,E722
+      run: flake8
     - name: Planemo lint
       run: planemo lint .
     - name: Planemo test tool
