--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -1,6 +1,6 @@
 name: Galaxy Tool Linting and Tests for PR
 # run planemo on a git repository containing a single tool
-# as a github action. Does NOT run flake8. So, bite me.
+# as a github action.
 # ross lazarus august 2020
 on: [pull_request,push]
 env:
@@ -28,18 +28,17 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - uses: actions/checkout@v2
       with:
-    # planemo does not seem to want to install the requirement galaxyxml 
+    # planemo does not seem to want to install the requirement galaxyxml
     # into the venv it manages at tool testing so do it the old skool way
         repository: 'galaxyproject/galaxy'
         path: 'galaxy'
-    - name: make venv ready for this galaxy and planemo 
+    - name: make venv ready for this galaxy and planemo
       run:  |
         python3 -m venv $GITHUB_WORKSPACE/galaxy/.venv
         . $GITHUB_WORKSPACE/galaxy/.venv/bin/activate
         pip install --upgrade pip
         pip install wheel
         pip install -r $GITHUB_WORKSPACE/galaxy/requirements.txt
-        # pip install galaxyxml # currently includes a patched working version awaiting PR merge
     - name: Upgrade pip
       run: pip install --upgrade pip
     # Install the `wheel` package so that when installing other packages which
